Ultima vuelta a maquinas

--- a/diapos/MaquinasAparamenta.tex
+++ b/diapos/MaquinasAparamenta.tex
@@ -1,4 +1,4 @@
-% Created 2018-10-25 jue 16:29
+% Created 2018-10-25 jue 22:54
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -52,9 +52,9 @@
 \maketitle
 
 \section{Fundamentos de Electromagnetismo}
-\label{sec:orgb470ab8}
+\label{sec:orgc7edcb4}
 
-\begin{frame}[label={sec:org5135053}]{Fuerza Magnética}
+\begin{frame}[label={sec:orgfc79ac5}]{Fuerza Magnética}
 Un campo magnético ejerce una fuerza sobre una carga en movimiento (o corriente eléctrica en un conductor) \footnote{Fuerza de Lorentz}.
 \[
 \vec{F} = q (\vec{v} \times \vec{B})
@@ -75,7 +75,7 @@ Un campo magnético ejerce una fuerza sobre una carga en movimiento (o corriente
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org508b5fa}]{Campo Magnético creado por un Conductor}
+\begin{frame}[label={sec:orgace27b7}]{Campo Magnético creado por un Conductor}
 Una corriente eléctrica crea un campo magnético en torno al conductor\footnote{Ley de Biot-Savart (y Oersted). Ley de Ampere.}. 
 
 \begin{columns}
@@ -92,7 +92,7 @@ Una corriente eléctrica crea un campo magnético en torno al conductor\footnote
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org9cb6e55}]{Interacción entre Conductores}
+\begin{frame}[label={sec:orgfaa8aae}]{Interacción entre Conductores}
 Dos conductores se repelen o atraen según el sentido de sus corrientes.
 
 \begin{center}
@@ -102,7 +102,7 @@ Dos conductores se repelen o atraen según el sentido de sus corrientes.
 Vídeo: \href{https://www.youtube.com/watch?v=2j8D\_N1v0tU\&t=0m15s}{Repulsión entre barras de Alta Tensión}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org06d034e}]{Flujo Magnético}
+\begin{frame}[label={sec:orgf3b7f96}]{Flujo Magnético}
 El flujo magnético es la cantidad de líneas de fuerza magnética que atraviesan una superficie. 
 
 Depende de la densidad de campo, \(B\), el área de la superficie, \(A\), y la posición relativa entre ambos, \(\theta\).
@@ -116,7 +116,7 @@ Depende de la densidad de campo, \(B\), el área de la superficie, \(A\), y la p
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4537cbd}]{Ley de Faraday}
+\begin{frame}[label={sec:org99b40af}]{Ley de Faraday}
 \begin{itemize}
 \item Cuando el \alert{flujo magnético} que atraviesa una espira es \alert{variable}
 aparece \alert{tensión inducida}.
@@ -144,11 +144,11 @@ variación.
 
 
 \section{Máquinas Eléctricas}
-\label{sec:org3ae8fb1}
+\label{sec:orgc6a7b3b}
 \subsection{Introducción}
-\label{sec:org36d0c13}
+\label{sec:org4c89b86}
 
-\begin{frame}[label={sec:org1d4eeea}]{Máquina Eléctrica}
+\begin{frame}[label={sec:orge0ebb44}]{Máquina Eléctrica}
 Una máquina eléctrica realiza una conversión entre dos formas de energía, una de ellas eléctrica:
 
 \begin{itemize}
@@ -158,7 +158,7 @@ Una máquina eléctrica realiza una conversión entre dos formas de energía, un
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf019ade}]{Partes de una Máquina}
+\begin{frame}[label={sec:org3570c45}]{Partes de una Máquina}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -179,31 +179,33 @@ La transformación de energía eléctrica y mecánica se produce a través del c
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org613bf83}]{Inductor e Inducido}
+\begin{frame}[label={sec:org07f1155}]{Inductor e Inducido}
 Al elemento que emite el campo magnético se le denomina \alert{inductor} y aquel que es atravesado por este flujo es el \alert{inducido}.
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/Electric_motor_cycle_3.pdf}
 \end{center}
 \end{frame}
 
-\subsection{Tipos de Máquinas}
-\label{sec:org6a30912}
-
-\begin{frame}[label={sec:org03e9873}]{Motor}
+\subsection{Motor}
+\label{sec:orgec713bc}
+\begin{frame}[label={sec:orgce0f466}]{Fundamento}
 \begin{itemize}
-\item La energía eléctrica de entrada produce una corriente eléctrica que genera un campo magnético variable.
-\item Este campo puede interactuar con otro campo magnético existente o con otro conductor y produce movimiento.
-\item Más habituales: de inducción, y de corriente continua.
+\item La energía eléctrica de \alert{entrada} produce una \alert{corriente eléctrica} que genera un \alert{campo magnético variable}.
+\item Este campo puede \alert{interactuar} con otro \alert{campo magnético existente} o con \alert{otro conductor}, y produce movimiento.
+\item Más habituales:
+\begin{itemize}
+\item \emph{Inducción}
+\item \emph{Corriente Continua}.
+\end{itemize}
 \end{itemize}
 \end{frame}
 
 
-\begin{frame}[label={sec:org4e8b5a8}]{Motor asíncrono o de inducción}
+\begin{frame}[label={sec:org354c692}]{Motor asíncrono o de inducción}
 \begin{itemize}
-\item Estator-Inductor alimentado por una corriente trifásica alterna (campo giratorio)
+\item \alert{Estator-Inductor} alimentado por una \alert{corriente trifásica alterna} (\emph{campo giratorio})
 
-\item Rotor-Inducido constituido por espiras cortocircuitadas (jaula de
-ardilla).
+\item \alert{Rotor-Inducido} constituido por espiras cortocircuitadas (\alert{jaula de ardilla}).
 
 \item Rotor gira a menor velocidad que el campo.
 \end{itemize}
@@ -215,11 +217,11 @@ ardilla).
 Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGlAu0uCHY\&feature=related}{(1)} \href{http://www.youtube.com/watch?v=P-eTLmJC2cQ}{(2)}
 \end{frame}
 
-\begin{frame}[label={sec:org9376822}]{Motor DC}
+\begin{frame}[label={sec:org6e50b79}]{Motor DC}
 \begin{itemize}
-\item Estator-Inductor con imanes permanentes o alimentado por corriente DC.
+\item \alert{Estator-Inductor} genera \alert{campo constante} (imanes permanentes o alimentado por corriente DC).
 
-\item Rotor-Inducido alimentado con corriente DC a través de un colector de delgas, o sin escobillas.
+\item \alert{Rotor-Inducido} alimentado con \alert{corriente DC} a través de un colector de delgas, o sin escobillas.
 \end{itemize}
 
 \begin{center}
@@ -228,29 +230,50 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{frame}
 
 
-\begin{frame}[label={sec:org0b4752c}]{Generador}
+\subsection{Generador}
+\label{sec:orgc8917e4}
+
+\begin{frame}[label={sec:orgc6eb018}]{Fundamento}
 \begin{itemize}
-\item Existe un campo magnético en el interior de la máquina (p. ej. imanes permanentes)
-\item La energía mecánica de entrada aporta movimiento a una bobina en el seno del campo.
-\item La interacción entre el campo y las espiras de la bobina producen una tensión inducida.
-\item Más habituales: asíncrono, síncrono, y de corriente continua.
+\item Existe un \alert{campo magnético en el interior de la máquina} (p. ej. imanes permanentes)
+\item La \alert{energía mecánica de entrada} aporta \alert{movimiento a una bobina} en el seno del campo.
+\item La \alert{interacción} entre el campo y las espiras de la bobina producen una \alert{tensión inducida}.
+\item Más habituales:
+\begin{itemize}
+\item \emph{Síncrono}
+\item \emph{Asíncrono}
+\item \emph{Corriente Continua}.
+\end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4307221}]{Generador Asíncrono}
+
+\begin{frame}[label={sec:org162fe23}]{Generador Síncrono o Alternador}
+\begin{itemize}
+\item \alert{Rotor-inductor} alimentado por \alert{corriente continua} mediante anillos.
+
+\item \alert{Estator-inducido} constituido por un \alert{devanado trifásico}.
+
+\item Velocidad de giro constante, sincronizada con la frecuencia de red.
+
+\item Empleado en turbinas hidráulicas y térmicas.
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org0697f77}]{Generador Asíncrono}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
-\item Estator-Inductor alimentado por una corriente trifásica alterna (campo giratorio)
+\item \alert{Estator} alimentado por una corriente trifásica (\emph{campo giratorio}).
 
-\item Rotor-Inducido constituido por espiras cortocircuitadas (jaula de
-ardilla).
+\item \alert{Rotor} constituido por espiras cortocircuitadas (\alert{jaula de ardilla}).
 
-\item Rotor debe girar a mayor velocidad que la del campo del estator.
+\item Si el rotor gira a mayor velocidad que el campo del estator, se induce corriente \guillemotleft{}de vuelta\guillemotright{} en el estator.
 
-\item Empleado en turbinas eólicas
+\item Empleado en turbinas eólicas.
 \end{itemize}
 \end{column}
+
 \begin{column}{0.5\columnwidth}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InsideWindTurbine.jpg}
@@ -259,31 +282,22 @@ ardilla).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org6c62a42}]{Generador Síncrono o Alternador}
+\begin{frame}[label={sec:orgb9e1f8d}]{Generador DC}
 \begin{itemize}
-\item Rotor-inductor alimentado por corriente continua mediante anillos.
+\item \alert{Estator-Inductor} genera campo constante (alimentado por corriente DC o imanes permanentes).
 
-\item Estator-inducido constituido por un devanado trifásico.
+\item El movimiento aplicado en el \alert{Rotor-Inducido} en el seno del campo produce una \alert{tensión inducida}.
 
-\item Velocidad de giro constante, sincronizada con la frecuencia de red.
-
-\item Empleado en turbinas hidráulicas y térmicas.
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:org0145af6}]{Generador DC}
-\begin{itemize}
-\item Estator-Inductor alimentado por corriente DC (o imanes permanentes).
-
-\item El colector de delgas transforma la frecuencia de alimentación (DC)
-en alterna.
+\item El colector de delgas transforma alterna en continua.
 
 \item Empleado en máquinas eólicas de baja potencia.
 \end{itemize}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdee8163}]{Transformador}
+\subsection{Transformador}
+\label{sec:org4dfea97}
+\begin{frame}[label={sec:org14abb61}]{Fundamento}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -304,7 +318,7 @@ en alterna.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org020d9c4}]{Transformador}
+\begin{frame}[label={sec:org44ce254}]{Relación de Transformación}
 \begin{align*}
 N_{s}\cdot I_{s} &= N_{p}\cdot I_{p}\\
 \frac{V_{p}}{N_{p}} &= \frac{V_{s}}{N_{s}}
@@ -321,18 +335,18 @@ N_{s}\cdot I_{s} &= N_{p}\cdot I_{p}\\
 
 
 \section{Aparamenta eléctrica}
-\label{sec:org51e4688}
+\label{sec:org6037cdf}
 
 \subsection{Sistema de Suministro Eléctrico}
-\label{sec:org0e18c9f}
-\begin{frame}[label={sec:org2a45656}]{Sistema de suministro eléctrico}
+\label{sec:org3dc0368}
+\begin{frame}[label={sec:org28bf3e9}]{Sistema de suministro eléctrico}
 Un \alert{sistema de suministro eléctrico} tiene como objetivo \alert{producir,
 transportar y distribuir energía eléctrica} a los lugares de consumo,
 con el mínimo coste posible en condiciones de \alert{fiabilidad, calidad y
 seguridad}.
 \end{frame}
 
-\begin{frame}[label={sec:org0685a36}]{Componentes del Sistema de Suministro Eléctrico}
+\begin{frame}[label={sec:orge3a05c3}]{Componentes del Sistema de Suministro Eléctrico}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Redelectrica2.png}
 \end{center}
@@ -353,8 +367,8 @@ algunos casos, almacenamiento)
 
 
 \subsection{Definición y Funciones}
-\label{sec:org7f1e26d}
-\begin{frame}[label={sec:org6ae8904}]{Definición}
+\label{sec:org723c2aa}
+\begin{frame}[label={sec:org60c2e5c}]{Definición}
 \begin{block}{ITC-BT-01}
 \begin{description}
 \item[{Aparamenta:}] Equipo, aparato o material previsto para ser conectado a un circuito eléctrico con el fin de asegurar una o varias de las siguientes funciones: \alert{protección}, \alert{control}, \alert{seccionamiento}, \alert{conexión}.
@@ -366,7 +380,7 @@ instalación.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org13a5ec6}]{Funciones de la aparamenta}
+\begin{frame}[label={sec:orgf29c24c}]{Funciones de la aparamenta}
 \begin{itemize}
 \item \alert{Protección}:
 
@@ -382,7 +396,7 @@ aislamiento.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge64effb}]{Funciones de la aparamenta}
+\begin{frame}[label={sec:orgf21bbf8}]{Funciones de la aparamenta}
 \begin{itemize}
 \item \alert{Aislamiento}: separar de forma verificable un circuito, un aparato o
 un elemento de la planta del resto de un sistema que se encuentra en
@@ -391,7 +405,7 @@ seguridad trabajos en la parte aislada.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2ccda90}]{Funciones de la aparamenta}
+\begin{frame}[label={sec:orgab6bbd4}]{Funciones de la aparamenta}
 \begin{itemize}
 \item \alert{Control:} modificar un sistema cargado en cualquier momento
 
@@ -405,7 +419,7 @@ seguridad trabajos en la parte aislada.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org772f630}]{Arco Eléctrico}
+\begin{frame}[label={sec:org4dbcb88}]{Arco Eléctrico}
 \begin{itemize}
 \item Descarga eléctrica que se forma entre dos electrodos sometidos a una diferencia de potencial.
 \item Durante el tiempo de la descarga se produce una luminosidad muy intensa y un gran desprendimiento de calor.
@@ -417,7 +431,7 @@ Vídeo: \href{http://www.youtube.com/watch?v=WBTvGqRA4\_0}{Apertura en Alta Tens
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8a61c30}]{Poder de corte y cierre}
+\begin{frame}[label={sec:orgba91c4e}]{Poder de corte y cierre}
 \begin{description}
 \item[{Poder de corte:}] intensidad de corriente que este dispositivo es
 capaz de cortar, bajo una tensión de restablecimiento determinada.
@@ -428,8 +442,8 @@ de establecer, bajo una tensión dada.
 \end{frame}
 
 \subsection{Tipos de Dispositivos}
-\label{sec:org39b1466}
-\begin{frame}[label={sec:orgee14664}]{Dispositivos simples}
+\label{sec:org0c8f1ab}
+\begin{frame}[label={sec:orgbac29f9}]{Dispositivos simples}
 \begin{block}{Seccionador}
 \begin{itemize}
 \item Dispositivo de dos posiciones (abierto/cerrado) enclavable y accionado manualmente que proporciona un aislamiento seguro de un circuito cuando está enclavado en la posición abierta.
@@ -446,7 +460,7 @@ de establecer, bajo una tensión dada.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org76afdba}]{Dispositivos simples}
+\begin{frame}[label={sec:org1ce5cc3}]{Dispositivos simples}
 \begin{block}{Contactor}
 \begin{itemize}
 \item Dispositivo accionado por solenoide que por lo general se mantiene cerrado mediante una corriente (reducida).
@@ -466,7 +480,7 @@ de establecer, bajo una tensión dada.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org507513b}]{Interruptor magnetotérmico}
+\begin{frame}[label={sec:org3bc1b28}]{Interruptor magnetotérmico}
 \begin{itemize}
 \item Dispositivo automático capaz de interrumpir la corriente eléctrica de un circuito cuando ésta sobrepasa ciertos valores máximos.
 
@@ -482,13 +496,13 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org50147e2}]{Interruptor Magnetotérmico}
+\begin{frame}[label={sec:org85cd048}]{Interruptor Magnetotérmico}
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/SeccionMagnetotermico.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf5b40e5}]{Interruptor diferencial}
+\begin{frame}[label={sec:org6c3b664}]{Interruptor diferencial}
 \begin{itemize}
 \item Dispositivo automático capaz de interrumpir la corriente eléctrica de un circuito cuando existe una corriente diferencial residual, indicativa de un defecto de aislamiento.
 \item Para la detección emplea un transformador toroidal que abraza a todos los conductores.
@@ -497,7 +511,7 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org70045b1}]{Interruptor Diferencial}
+\begin{frame}[label={sec:org6a2f40b}]{Interruptor Diferencial}
 \begin{center}
 \includegraphics[height=0.3\textheight]{../figs/InterruptorDiferencial.pdf}
 \end{center}
@@ -508,9 +522,9 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{frame}
 
 \section{Recursos}
-\label{sec:org4e9072d}
+\label{sec:org7ecb1df}
 
-\begin{frame}[label={sec:org1a0b9c5}]{Bibliografía}
+\begin{frame}[label={sec:org51a0a5a}]{Bibliografía}
 \begin{itemize}
 \item \alert{Fraile Mora, J.}: \emph{Máquinas Eléctricas}. Ed. Mc. Graw Hill.
 
