--- a/diapos/MaquinasAparamenta.org
+++ b/diapos/MaquinasAparamenta.org
@@ -121,20 +121,20 @@ Al elemento que emite el campo magnético se le denomina *inductor* y aquel que 
 #+ATTR_LATEX: :height 0.5\textheight
 [[../figs/Electric_motor_cycle_3.pdf]]
 
-** Tipos de Máquinas
-
-*** Motor
-- La energía eléctrica de entrada produce una corriente eléctrica que genera un campo magnético variable.
-- Este campo puede interactuar con otro campo magnético existente o con otro conductor y produce movimiento.
-- Más habituales: de inducción, y de corriente continua.
+** Motor
+*** Fundamento
+- La energía eléctrica de *entrada* produce una *corriente eléctrica* que genera un *campo magnético variable*.
+- Este campo puede *interactuar* con otro *campo magnético existente* o con *otro conductor*, y produce movimiento.
+- Más habituales:
+  - /Inducción/
+  - /Corriente Continua/.
 
 
 *** Motor asíncrono o de inducción
 
-- Estator-Inductor alimentado por una corriente trifásica alterna (campo giratorio)
+- *Estator-Inductor* alimentado por una *corriente trifásica alterna* (/campo giratorio/)
 
-- Rotor-Inducido constituido por espiras cortocircuitadas (jaula de
-  ardilla).
+- *Rotor-Inducido* constituido por espiras cortocircuitadas (*jaula de ardilla*).
 
 - Rotor gira a menor velocidad que el campo.
 
@@ -145,19 +145,35 @@ Vídeos: Motor de inducción artesanal [[http://www.youtube.com/watch?v=ZRGlAu0u
 
 *** Motor DC
 
-- Estator-Inductor con imanes permanentes o alimentado por corriente DC.
+- *Estator-Inductor* genera *campo constante* (imanes permanentes o alimentado por corriente DC).
 
-- Rotor-Inducido alimentado con corriente DC a través de un colector de delgas, o sin escobillas.
+- *Rotor-Inducido* alimentado con *corriente DC* a través de un colector de delgas, o sin escobillas.
 
 #+ATTR_LATEX: :height 0.6\textheight
 [[file:../figs/Electric_motor_cycle_3.pdf]]
 
 
-*** Generador
-- Existe un campo magnético en el interior de la máquina (p. ej. imanes permanentes)
-- La energía mecánica de entrada aporta movimiento a una bobina en el seno del campo.
-- La interacción entre el campo y las espiras de la bobina producen una tensión inducida.
-- Más habituales: asíncrono, síncrono, y de corriente continua.
+** Generador
+
+*** Fundamento
+- Existe un *campo magnético en el interior de la máquina* (p. ej. imanes permanentes)
+- La *energía mecánica de entrada* aporta *movimiento a una bobina* en el seno del campo.
+- La *interacción* entre el campo y las espiras de la bobina producen una *tensión inducida*.
+- Más habituales:
+  - /Síncrono/
+  - /Asíncrono/
+  - /Corriente Continua/.
+
+
+*** Generador Síncrono o Alternador
+
+- *Rotor-inductor* alimentado por *corriente continua* mediante anillos.
+
+- *Estator-inducido* constituido por un *devanado trifásico*.
+
+- Velocidad de giro constante, sincronizada con la frecuencia de red.
+
+- Empleado en turbinas hidráulicas y térmicas.
 
 *** Generador Asíncrono
 
@@ -165,40 +181,32 @@ Vídeos: Motor de inducción artesanal [[http://www.youtube.com/watch?v=ZRGlAu0u
      :PROPERTIES:
      :BEAMER_col: 0.6
      :END:
-- Estator-Inductor alimentado por una corriente trifásica alterna (campo giratorio)
+- *Estator* alimentado por una corriente trifásica (/campo giratorio/).
 
-- Rotor-Inducido constituido por espiras cortocircuitadas (jaula de
-  ardilla).
+- *Rotor* constituido por espiras cortocircuitadas (*jaula de ardilla*).
 
-- Rotor debe girar a mayor velocidad que la del campo del estator.
+- Si el rotor gira a mayor velocidad que el campo del estator, se induce corriente "de vuelta" en el estator.
 
-- Empleado en turbinas eólicas
+- Empleado en turbinas eólicas.
+
 ****                                                                  :BMCOL:
      :PROPERTIES:
      :BEAMER_col: 0.5
      :END:
 [[file:../figs/InsideWindTurbine.jpg]]
 
-*** Generador Síncrono o Alternador
-
-- Rotor-inductor alimentado por corriente continua mediante anillos.
-
-- Estator-inducido constituido por un devanado trifásico.
-
-- Velocidad de giro constante, sincronizada con la frecuencia de red.
-
-- Empleado en turbinas hidráulicas y térmicas.
-
 *** Generador DC
-- Estator-Inductor alimentado por corriente DC (o imanes permanentes).
+- *Estator-Inductor* genera campo constante (alimentado por corriente DC o imanes permanentes).
 
-- El colector de delgas transforma la frecuencia de alimentación (DC)
-  en alterna.
+- El movimiento aplicado en el *Rotor-Inducido* en el seno del campo produce una *tensión inducida*.
+
+- El colector de delgas transforma alterna en continua.
 
 - Empleado en máquinas eólicas de baja potencia.
 
 
-*** Transformador
+** Transformador
+*** Fundamento
 ****                                                                  :BMCOL:
      :PROPERTIES:
      :BEAMER_col: 0.6
@@ -215,7 +223,7 @@ Vídeos: Motor de inducción artesanal [[http://www.youtube.com/watch?v=ZRGlAu0u
 [[file:../figs/Transformador2.pdf]]
 [[file:../figs/Transformador.png]]
 
-*** Transformador
+*** Relación de Transformación
 
 #+BEGIN_EXPORT latex
 \begin{align*}
